--- a/views/glimphsGallery.ejs
+++ b/views/glimphsGallery.ejs
@@ -102,6 +102,9 @@
           <div class="col-md-7 col-lg-7 mb-6" style="margin-top: -50px;" data-aos="fade-up" data-aos-delay="300">
             <div class="text-center">
               <div class="table-responsive" style="max-height: 400px; overflow-y: auto; scrollbar-width: none;">
+                <%if(glimphsData.length==0){%>
+                    No Data Found
+                  <%}else{%>
                 <table class="table table-sm table-bordered text-black" style="font-size: 14px;">
                   <caption>
                     
@@ -119,21 +122,25 @@
                           color: white !important;
                       }
                   </style>
-                 
+                  <%glimphsData.forEach((glimphsObj,index)=>{%>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td><%=index+1%></td>
                       <td>
-                        <form action="/admin/" method="post">
-                          <input type="hidden" value="" name="" id="">
+                        <img src="/glimphsImages/<%=glimphsObj.glimphsImage%>" width="75%" height="150vh" alt="">
+                      </td>
+                      <td>
+                        <form action="/admin/deleteGlimphs" method="post">
+                          <input type="hidden" value="<%=glimphsObj.glimphsId%>" name="glimphsId" id="glimphsId">
                           <button class="btn btn-outline-primary p-2 text-black custom-hover">Delete</button>
                         </form>
                       </td>
                     </tr>  
-
+                    <%})%>
+                  
                   
                   </tbody>
                 </table>
+                <%}%>
               </div>
             </div>
           </div>
