--- a/views/allocateBatch.ejs
+++ b/views/allocateBatch.ejs
@@ -66,47 +66,68 @@
         <div class="row mb-5 justify-content-center">
           <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
             <br>
-            <h4 class="text-black">Student List</h4>
+            <h4 class="text-black">Allocate Batch to Students</h4>
             <br>
             <span style="color:green"><%=message%></span>
-            <%if(studentData.length==0){%>
-                <span style="color:crimson">No Record Found</span>
-            <%}else{%>
-            <table class="table" style="font-size: 12px; color: black;">
-                <thead>
-                  <tr>
-                    <th scope="col">S.No</th>
-                    <th scope="col" style="width:180px">EnrollId</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">DOB</th>
-                    <th scope="col">Contact</th>
-                    <th scope="col">Address</th>
-                    <th scope="col">Guardian <br> Name</th>
-                    <th scope="col">Guardian <br> Contact</th>
-                    <th scope="col">AdminVerify</th>
-                   </tr>
-                </thead>
-                <tbody>
-                  <%studentData.forEach((obj,index)=>{%>
-                      <tr>
-                        <td><%=(index+1)%></td>
-                        <td><%=obj.enrollId%></td>
-                        <td><%=obj.name%></td>
-                        <td><%=obj.email%></td>
-                        <td><%=obj.gender%></td>
-                        <td><%=new Date(obj.date).toISOString().split("T")[0]%></td>
-                        <td><%=obj.contact%></td>
-                        <td><%=obj.address%></td>
-                        <td><%=obj.gname%></td>
-                        <td><%=obj.gcontact%></td>
-                        <td><%=obj.adminVerify%></td>
-                        </tr>
-                  <%})%>
-                </tbody>
-              </table>
-            <%}%>  
+            <%if(batchArray.length==0){%>
+              <span style="color:crimson">No Record Found</span>
+          <%}else{%>
+          <table class="table" style="font-size: 12px; color: black;">
+              <thead>
+                <tr>
+                  <th scope="col">S.No</th>
+                  <th scope="col" style="width:180px">BatchId</th>
+                  <th scope="col">StartDate</th>
+                  <th scope="col">StartTime</th>
+                  <th scope="col">EndTime</th>
+                  <th scope="col">BatchDuration</th>
+                  <th scope="col">CourseName</th>
+                  <th scope="col">TrainerName</th>
+                  <th scope="col">Student</th>
+                  <th scope="col">AllocateBatch</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!--  will needs to try with normal for loop -->
+                <% batchArray.forEach((obj,index)=>{%>
+                    <tr>
+                      <td><%=(index+1)%></td>
+                      <td>
+                      </td>
+                      <td><%=new Date(obj.startDate).toISOString().split("T")[0]%></td>
+                      <td><%=obj.startTime%></td>
+                      <td><%=obj.endTime%></td>
+                      <td><%=obj.batchDuration%></td>
+                      <td><%=obj.courseName%></td>
+                      <td><%=obj.trainerName%></td>
+                      <td>
+                        <form action="/employee/employeeAllocateBatch" method="post">
+                          <input type="hidden" value="<%=obj.batchId%>" name="batchId">
+                      
+                        <select name="studentData" id="studentData" class="p-2">
+                        <option value="">Select Student</option>
+                          <%obj.studentData.forEach((studObj)=>{%>
+                            <option value="<%=JSON.stringify(studObj)%>">
+                              <%=studObj.name%> | 
+                              <%=studObj.email%>
+                            </option>
+                        <%})%>
+                      </select>
+
+                      <button class="btn btn-primary p-2">Allocate Batch</button>
+                    </form>                      
+                      </td>
+                      <td>
+                      <a href="/employee/employeeAllocateBatch?data=<%=JSON.stringify(obj)%>">Click</a>
+                      </td>
+                    
+                      </tr>
+                    
+                <%})%>
+              </tbody>
+            </table>
+          
+          <%}%> 
           </div>
         </div>
       
