--- a/views/videoGallery.ejs
+++ b/views/videoGallery.ejs
@@ -37,10 +37,11 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <div class="site-mobile-menu-body"></div>
+      <%- include('./adminSideBar.ejs')%>
+
     </div>
    
-    
+
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
       
         <div class="container-fluid">
@@ -48,7 +49,7 @@
             <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
             <div>
               <nav class="site-navigation position-relative text-right" role="navigation">
-                <%-include('./employeeMgmtHomeHeader.js')%>
+                <%-include('./adminHomeHeader.js')%>
               </nav>
              <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
               <span class="icon-menu h3"></span></a>
@@ -58,64 +59,117 @@
         </div>
         
       </header>
-  
 
-    <div class="site-section" id="programs-section" style="margin-top: -1px;">
-      <br>
-        <div class="container">
+    
+    <div class="site-section" id="teachers-section" style="margin-top: -1px;">
+      <div class="container">
+
         <div class="row mb-5 justify-content-center">
-          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
-            <br>
-            <h4 class="text-black">Student List</h4>
-            <br>
-            <span style="color:green"><%=message%></span>
-            <%if(studentData.length==0){%>
-                <span style="color:crimson">No Record Found</span>
-            <%}else{%>
-            <table class="table" style="font-size: 12px; color: black;">
-                <thead>
-                  <tr>
-                    <th scope="col">S.No</th>
-                    <th scope="col" style="width:180px">EnrollId</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">DOB</th>
-                    <th scope="col">Contact</th>
-                    <th scope="col">Address</th>
-                    <th scope="col">Guardian <br> Name</th>
-                    <th scope="col">Guardian <br> Contact</th>
-                    <th scope="col">AdminVerify</th>
-                   </tr>
-                </thead>
-                <tbody>
-                  <%studentData.forEach((obj,index)=>{%>
-                      <tr>
-                        <td><%=(index+1)%></td>
-                        <td><%=obj.enrollId%></td>
-                        <td><%=obj.name%></td>
-                        <td><%=obj.email%></td>
-                        <td><%=obj.gender%></td>
-                        <td><%=new Date(obj.date).toISOString().split("T")[0]%></td>
-                        <td><%=obj.contact%></td>
-                        <td><%=obj.address%></td>
-                        <td><%=obj.gname%></td>
-                        <td><%=obj.gcontact%></td>
-                        <td><%=obj.adminVerify%></td>
-                        </tr>
-                  <%})%>
-                </tbody>
-              </table>
-            <%}%>  
+          <div class="col-lg-7 mb-5 text-center"  data-aos="fade-up" data-aos-delay="">
+            <br><br>
+            <h4 class="text-black">Video Link Section</h4>
+            <span><%=message%></span>
           </div>
         </div>
-      
 
+        <div class="row">
+
+          <div class="col-md-4 col-lg-4 mb-2" data-aos="fade-up" data-aos-delay="100">
+            <div class="teacher text-center">
+            
+              <img src="images/yt.png" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
+              <div class="py-0">
+                <h5 class="text-black">Upload Video Links</h5>
+                 
+                  <form action="/admin/adminAddVideoLink" method="post" class="form-box">
+
+                    <div class="form-group">
+                        <input type="url" class="form-control" name="videoLink" id="videoLink"
+                          required placeholder="Enter Video Link"/>
+                      </div>
+  
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="videoTitle" id="videoTitle"
+                        required placeholder="Enter Video Title"/>
+                    </div>
+
+                    <div class="form-group">
+                        <textarea class="form-control" name="videoDesc" id="videoDesc"
+                          required placeholder="Enter video Description"></textarea>
+                      </div>
+  
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary p-2 w-100" value="Upload Video Link" />
+                    </div>
+                  </form>
+
+              </div>
+              
+            </div>
+          </div>
+
+          <div class="col-md-8 col-lg-8 mb-6" style="margin-top: -50px;" data-aos="fade-up" data-aos-delay="300">
+            <div class="text-center">
+              <div class="table-responsive" style="max-height: 420px; overflow-y: auto; scrollbar-width: none;">
+                <table class="table table-sm table-bordered text-black" style="font-size: 14px;">
+                  <caption>
+                    
+                  </caption>
+                  <thead class="table-dark">
+                    <tr>
+                      <th scope="col">S.No</th>
+                      <th scope="col">Video Link</th>
+                      <th scope="col">Video&nbsp;Title</th>
+                      <th scope="col">Video Description</th>
+                      <th scope="col" colspan="2">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <style>
+                      .custom-hover:hover {
+                          color: white !important;
+                      }
+                  </style>
+                   <%videoData.forEach((obj,index)=>{%>
+                    <tr>
+                      <td><%=index+1%></td>
+                      <td>
+                        <iframe class="w-100" style="height:150px;" 
+                        src="<%=obj.videoLink%>" 
+                        title="YouTube video player" frameborder="0" 
+                        allow="autoplay; encrypted-media; fullscreen; picture-in-picture" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen playsinline>
+                    </iframe>
+                      </td>
+                      <td><%=obj.videoTitle%></td>
+                      <td><%=obj.videoDesc%></td>
+                      <td>
+                        <form action="/admin/adminViewVideoLink" method="post">
+                          <input type="hidden" value="<%=JSON.stringify(obj)%>" name="videoData" id="videoData">
+                          <button class="btn btn-outline-primary p-2 text-black custom-hover">View & Update</button>
+                        </form>
+                      </td>
+                      <td>
+                        <form action="/admin/adminDeleteVideoLink" method="post">
+                          <input type="hidden" value="<%=obj.videoId%>" name="videoId" id="videoId">
+                          <button class="btn btn-outline-primary p-2 text-black custom-hover">Delete</button>
+                        </form>
+                      </td>
+                    </tr>  
+                  <%})%>
+                  
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
       </div>
     </div>
 
-    
-     
+  
     <footer class="footer-section bg-white">
       <div class="container">
         <div class="row">
