--- a/views/adminCourses.ejs
+++ b/views/adminCourses.ejs
@@ -98,7 +98,7 @@
             <div class="col-lg-5 mr-auto order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
               <div>
                 <!-- Admin Add Course -->
-                <form action="/admin/adminAddCourse" method="post" class="form-box">
+                <form action="/admin/adminAddCourse" method="post" enctype="multipart/form-data" class="form-box">
                   <h3 class="h4 text-black mb-4">Add Course</h3>
                   <div class="form-group">
                     <input type="text" placeholder="Course Name" name="courseName" id="courseName" class="form-control">
@@ -122,6 +122,13 @@
                   </div>
                   <div class="form-group">
                     <input type="text" placeholder="Course Fees in INR" name="courseFees" id="courseFees" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <textarea placeholder="Course Description" name="courseDesc" id="courseDesc" class="form-control"></textarea>
+                  </div>
+                  Upload Course Banner : 
+                  <div class="form-group">
+                    <input type="file" name="courseFile" id="courseFile" class="form-control">
                   </div>
                   
                   <div class="form-group">
