--- a/views/home.ejs
+++ b/views/home.ejs
@@ -279,101 +279,23 @@
 
           <div class="owl-carousel col-12 nonloop-block-14">
 
+            <%courseData.forEach((obj,index)=>{%>
             <div class="course bg-white h-100 align-self-stretch">
               <figure class="m-0">
-                <a href="#"><img src="images/java.jpg" alt="Image" class="img-fluid"></a>
+                <a href="#"><img src="/courseImages/<%=obj.courseFile%>" alt="Image" class="img-fluid"></a>
               </figure>
               <div class="course-inner-text py-4 px-4">
                 <span class="course-price">Special Discounts Available</span>
                 <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
-                <h3><a href="#">Java Programming</a></h3>
-                <p>Build robust, scalable applications with a versatile object-oriented language.</p>
+                <h3><a href="#"><%=obj.courseName%></a></h3>
+                <p><%=obj.courseDesc%></p>
               </div>
               <div class="d-flex border-top stats">
                 <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
               </div>
             </div>
-
-            <div class="course bg-white h-100 align-self-stretch">
-              <figure class="m-0">
-                <a href="#"><img src="images/python.webp" alt="Image" class="img-fluid"></a>
-              </figure>
-              <div class="course-inner-text py-4 px-4">
-                <span class="course-price">Special Discounts Available</span>
-                <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
-                <h3><a href="#">Python Programming</a></h3>
-                <p>Simplify coding with a powerful language for web, data, and AI development.</p>
-              </div>
-              <div class="d-flex border-top stats">
-                <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
-              </div>
-            </div>
-
-            <div class="course bg-white h-100 align-self-stretch">
-              <figure class="m-0">
-                <a href="#"><img src="images/mern.png" alt="Image" class="img-fluid"></a>
-              </figure>
-              <div class="course-inner-text py-4 px-4">
-                <span class="course-price">Special Discounts Available</span>
-                <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
-                <h3><a href="#">MERN Stack</a></h3>
-                <p>Master full-stack web development with MongoDB, Express, React, and Node.js.</p>
-              </div>
-              <div class="d-flex border-top stats">
-                <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
-              </div>
-            </div>
-
-
-
-            <div class="course bg-white h-100 align-self-stretch">
-              <figure class="m-0">
-                <a href="#"><img src="images/data analytics.webp" alt="Image" class="img-fluid"></a>
-              </figure>
-              <div class="course-inner-text py-4 px-4">
-                <span class="course-price">Special Discounts Available</span>
-                <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
-                <h3><a href="#">Data Science</a></h3>
-                <p>Unlock insights by analyzing and visualizing complex datasets with Data Science.</p>
-              </div>
-              <div class="d-flex border-top stats">
-                <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
-              </div>
-            </div>
-
-            <div class="course bg-white h-100 align-self-stretch">
-              <figure class="m-0">
-                <a href="#"><img src="images/data analytics.webp" alt="Image" class="img-fluid"></a>
-              </figure>
-              <div class="course-inner-text py-4 px-4">
-                <span class="course-price">Special Discounts Available</span>
-                <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
-                <h3><a href="#">Data Analytics</a></h3>
-                <p>Interpret data trends to drive strategic decision-making with Data Analytics.</p>
-              </div>
-              <div class="d-flex border-top stats">
-                <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
-              </div>
-            </div>
-
-            <div class="course bg-white h-100 align-self-stretch">
-              <figure class="m-0">
-                <a href="#"><img src="images/aiml.png" alt="Image" class="img-fluid"></a>
-              </figure>
-              <div class="course-inner-text py-4 px-4">
-                <span class="course-price">Special Discounts Available</span>
-                <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
-                <h3><a href="#">AI/ML</a></h3>
-                <p>Create intelligent solutions with cutting-edge artificial intelligence and machine learning.</p>
-              </div>
-              <div class="d-flex border-top stats">
-                <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
-              </div>
-            </div>
-
+            <%})%>
           </div>
-
-
 
         </div>
         <div class="row justify-content-center">
