--- a/views/employeeLogin.ejs
+++ b/views/employeeLogin.ejs
@@ -53,7 +53,14 @@
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
                 <li><a href="#programs-section" class="nav-link">Programs</a></li>
-                <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
+                <!-- <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li> -->
+                <li class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle" id="settingsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Section</a>
+                  <ul class="dropdown-menu" aria-labelledby="settingsDropdown">
+                      <li><a class="dropdown-item" href="/employee/employeeLogin">Employee</a></li>
+                      <li><a class="dropdown-item" href="/student/studentLogin">Student</a></li>
+                  </ul>
+              </li>
               </ul>
             </nav>
           </div>
