--- a/views/home.ejs
+++ b/views/home.ejs
@@ -167,7 +167,15 @@
           <li><a href="" class="nav-link">Courses</a></li>
           <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
           <li><a href="/blog" class="nav-link">Blog</a></li>
-          <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
+         
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="settingsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Section</a>
+            <ul class="dropdown-menu" aria-labelledby="settingsDropdown">
+                <li><a class="dropdown-item" href="/employee/employeeLogin">Employee</a></li>
+                <li><a class="dropdown-item" href="/student/studentLogin">Student</a></li>
+            </ul>
+        </li>
+    
         </ul>
       </div>
     </div>
@@ -186,7 +194,15 @@
                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
                 <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
                 <li><a href="/blog" class="nav-link">Blog</a></li>
-                <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
+                <!-- <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li> -->
+                <li class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle" id="settingsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Section</a>
+                  <ul class="dropdown-menu" aria-labelledby="settingsDropdown">
+                      <li><a class="dropdown-item" href="/employee/employeeLogin">Employee</a></li>
+                      <li><a class="dropdown-item" href="/student/studentLogin">Student</a></li>
+                  </ul>
+              </li>
+
               </ul>
             </nav>
           </div>
