--- a/views/allocateBatch.ejs
+++ b/views/allocateBatch.ejs
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <base href="/">
-    <title>EduSphere</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+<head>
+  <base href="/">
+  <title>EduSphere</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
-    <link rel="stylesheet" href="css/style.css">
-    
-  </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-  
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+
+  <link rel="stylesheet" href="css/aos.css">
+
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
   <div class="site-wrap">
 
     <div class="site-mobile-menu site-navbar-target">
@@ -39,110 +41,128 @@
       </div>
       <div class="site-mobile-menu-body"></div>
     </div>
-   
-    
+
+
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-      
-        <div class="container-fluid">
-          <div class="d-flex align-items-center">
-            <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
-            <div>
-              <nav class="site-navigation position-relative text-right" role="navigation">
-                <%-include('./employeeMgmtHomeHeader.js')%>
-              </nav>
-             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
+
+      <div class="container-fluid">
+        <div class="d-flex align-items-center">
+          <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
+          <div>
+            <nav class="site-navigation position-relative text-right" role="navigation">
+              <%-include('./employeeMgmtHomeHeader.js')%>
+            </nav>
+            <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
               <span class="icon-menu h3"></span></a>
-  
-            </div>
+
           </div>
         </div>
-        
-      </header>
-  
+      </div>
+
+    </header>
+
 
     <div class="site-section" id="programs-section" style="margin-top: -1px;">
       <br>
-        <div class="container">
+      <div class="container">
         <div class="row mb-5 justify-content-center">
-          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
+          <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="">
             <br>
             <h4 class="text-black">Allocate Batch to Students</h4>
             <br>
-            <span style="color:green"><%=message%></span>
+            <span style="color:green">
+              <%=message%>
+            </span>
             <%if(batchArray.length==0){%>
               <span style="color:crimson">No Record Found</span>
-          <%}else{%>
-          <table class="table" style="font-size: 12px; color: black;">
-              <thead>
-                <tr>
-                  <th scope="col">S.No</th>
-                  <th scope="col" style="width:180px">BatchId</th>
-                  <th scope="col">StartDate</th>
-                  <th scope="col">StartTime</th>
-                  <th scope="col">EndTime</th>
-                  <th scope="col">BatchDuration</th>
-                  <th scope="col">CourseName</th>
-                  <th scope="col">TrainerName</th>
-                  <th scope="col">Student</th>
-                  <th scope="col">AllocateBatch</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!--  will needs to try with normal for loop -->
-                <% batchArray.forEach((obj,index)=>{%>
+              <%}else{%>
+                <table class="table" style="font-size: 12px; color: black;">
+                  <thead>
                     <tr>
-                      <td><%=(index+1)%></td>
-                      <td>
-                      </td>
-                      <td><%=new Date(obj.startDate).toISOString().split("T")[0]%></td>
-                      <td><%=obj.startTime%></td>
-                      <td><%=obj.endTime%></td>
-                      <td><%=obj.batchDuration%></td>
-                      <td><%=obj.courseName%></td>
-                      <td><%=obj.trainerName%></td>
-                      <td>
-                        <form action="/employee/employeeAllocateBatch" method="post">
-                          <input type="hidden" value="<%=obj.batchId%>" name="batchId">
-                      
-                        <select name="studentData" id="studentData" class="p-2">
-                        <option value="">Select Student</option>
-                          <%obj.studentData.forEach((studObj)=>{%>
-                            <option value="<%=JSON.stringify(studObj)%>">
-                              <%=studObj.name%> | 
-                              <%=studObj.email%>
-                            </option>
-                        <%})%>
-                      </select>
+                      <th scope="col">S.No</th>
+                      <th scope="col" style="width:180px">BatchId</th>
+                      <th scope="col">StartDate</th>
+                      <th scope="col">StartTime</th>
+                      <th scope="col">EndTime</th>
+                      <th scope="col">BatchDuration</th>
+                      <th scope="col">CourseName</th>
+                      <th scope="col">TrainerName</th>
+                      <th scope="col">Student</th>
+                      <th scope="col">AllocateBatch</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% batchArray.forEach((obj,index)=>{%>
+                      <tr>
+                        <td>
+                          <%=(index+1)%>
+                        </td>
+                        <td>
+                          <%=obj.batchId%>
+                        </td>
+                        <td>
+                          <%=new Date(obj.startDate).toISOString().split("T")[0]%>
+                        </td>
+                        <td>
+                          <%=obj.startTime%>
+                        </td>
+                        <td>
+                          <%=obj.endTime%>
+                        </td>
+                        <td>
+                          <%=obj.batchDuration%>
+                        </td>
+                        <td>
+                          <%=obj.courseName%>
+                        </td>
+                        <td>
+                          <%=obj.trainerName%>
+                        </td>
+                        <td>
+                          <form action="/employee/employeeAllocateBatch" method="post">
+                            <input type="hidden" value="<%=obj.batchId%>" name="batchId">
+                            <input type="hidden" value="<%=obj.courseId%>" name="courseId">
+                            <input type="hidden" value="<%=obj.courseName%>" name="courseName">
+                            <input type="hidden" value="<%=obj.trainerName%>" name="trainerName">
 
-                      <button class="btn btn-primary p-2">Allocate Batch</button>
-                    </form>                      
-                      </td>
-                      <td>
-                      <a href="/employee/employeeAllocateBatch?data=<%=JSON.stringify(obj)%>">Click</a>
-                      </td>
-                    
+                            <select name="studentData" id="studentData" class="p-2">
+                              <option value="">Select Student</option>
+                              <%obj.studentData.forEach((studObj)=>{%>
+                                <option value="<%=JSON.stringify(studObj)%>">
+                                  <%=studObj.name%> |
+                                    <%=studObj.email%>
+                                </option>
+                                <%})%>
+                            </select>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary p-2">Allocate Batch</button>
+                        </form>
+                        </td>
+
                       </tr>
-                    
-                <%})%>
-              </tbody>
-            </table>
-          
-          <%}%> 
+
+                      <%})%>
+                  </tbody>
+                </table>
+
+                <%}%>
           </div>
         </div>
-      
+
 
       </div>
     </div>
 
-    
-     
+
+
     <footer class="footer-section bg-white">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
             <h3>About OneSchool</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro consectetur ut hic ipsum et veritatis corrupti. Itaque eius soluta optio dolorum temporibus in, atque, quos fugit sunt sit quaerat dicta.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro consectetur ut hic ipsum et veritatis
+              corrupti. Itaque eius soluta optio dolorum temporibus in, atque, quos fugit sunt sit quaerat dicta.</p>
           </div>
 
           <div class="col-md-3 ml-auto">
@@ -157,7 +177,8 @@
 
           <div class="col-md-4">
             <h3>Subscribe</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt incidunt iure iusto architecto? Numquam, natus?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt incidunt iure iusto architecto?
+              Numquam, natus?</p>
             <form action="#" class="footer-subscribe">
               <div class="d-flex mb-5">
                 <input type="text" class="form-control rounded-0" placeholder="Email">
@@ -171,20 +192,23 @@
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <div class="border-top pt-5">
-            <p>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      </p>
+              <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;
+                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
+                with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                  target="_blank">Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </p>
             </div>
           </div>
-          
+
         </div>
       </div>
     </footer>
 
-  
-    
+
+
   </div> <!-- .site-wrap -->
 
   <script src="js/jquery-3.3.1.min.js"></script>
@@ -201,8 +225,9 @@
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery.sticky.js"></script>
 
-  
+
   <script src="js/main.js"></script>
-    
-  </body>
+
+</body>
+
 </html>
