--- a/views/studentViewBatches.ejs
+++ b/views/studentViewBatches.ejs
@@ -41,102 +41,61 @@
     </div>
    
 
+
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
       
-        <div class="container-fluid">
-          <div class="d-flex align-items-center">
-            <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
-            <div>
-              <nav class="site-navigation position-relative text-right" role="navigation">
-                <%-include('./employeeMgmtHomeHeader.js')%>
-              </nav>
-             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
-              <span class="icon-menu h3"></span></a>
-  
-            </div>
+      <div class="container-fluid">
+        <div class="d-flex align-items-center">
+          <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
+          <div>
+            <nav class="site-navigation position-relative text-right" role="navigation">
+                <%-include('./studentHomeHeader.js')%>
+            </nav>
+           <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
+            <span class="icon-menu h3"></span></a>
+
           </div>
-        </div>
-        
-      </header>
-
-      <div class="site-section" id="courses-section" style="margin-top: -1px;">
-        <br>
-        <div class="container">
-          <div class="row mb-5 justify-content-center">
-            <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
-                <br>
-              <h4 class="text-black">Batch Section</h4>
-              <span><%=message%></span>
-            </div>
-          </div>
-          <div style="margin-top: -70px;" class="row mb-5 align-items-center">
-            
-            <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-              <img src="images/undraw_teaching.svg" alt="Image" class="img-fluid">
-              <form action="/batch/viewBatches">
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-block" value="View Batches">
-                </div>
-              </form>  
-
-            </div>
-  
-            <div class="col-lg-5 mr-auto order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-              <div>
-                <!-- Employee Add Batch -->
-                <form action="/batch/addBatch" method="post" class="form-box">
-                  <h3 class="h4 text-black mb-4">
-                    Add Batch
-                  </h3>
-                  <div class="form-group mb-4">
-                    <select name="courseId" id="courseId" class="form-control">
-                      <option value="">Select Course</option>
-                      <%courseArrObj.forEach((obj)=>{%>
-                        <option value="<%=obj.courseId%>"><%=obj.courseName%></option>
-                      <%})%>
-                    </select>
-                  </div>
-                  Batch Start Date
-                  <div class="form-group">
-                    <input type="date" name="startDate" id="startDate" class="form-control">
-                  </div>
-                  Batch Start Time
-                  <div class="form-group">
-                    <input type="text" name="startTime" placeholder="00:00 AM | PM" id="startTime" class="form-control">
-                  </div>
-                  Batch End Time
-                  <div class="form-group">
-                    <input type="text" name="endTime" placeholder="00:00 AM | PM" id="endTime" class="form-control">
-                  </div>
-
-                  <div class="form-group mb-4">
-                    <select name="batchDuration" id="batchDuration" class="form-control">
-                      <option value="">Select Batch Duration</option>
-                      <option value="1 Month">1 Month</option>
-                      <option value="2 Months">2 Months</option>
-                      <option value="3 Months">3 Months</option>
-                      <option value="6 Months">6 Months</option>
-                      <option value="1 Year">1 Year</option>
-                    </select>
-                  </div>
-                  
-                  <div class="form-group">
-                    <input type="submit" class="btn btn-primary btn-block" value="Add Batch">    
-                </div>
-
-                </form>
-              </div>
-              
-            </div>
-          </div>
-  
-        
-  
         </div>
       </div>
-    
+      
+    </header>
 
-  
+    <div class="intro-section" id="home-section">
+      
+      <div class="slide-1" style="background-image: url('images/hero_1.jpg');" data-stellar-background-ratio="0.5">
+        <div class="container">
+          <div class="row align-items-center" >
+            <div class="col-12" style=" margin-top: -100px;">
+              <div class="row align-items-center">
+                <div class="col-lg-6 mb-4">
+                  <h3  data-aos="fade-up" data-aos-delay="100" class="text-white">EduSphere | view Batches</h3>
+                  <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">
+                  Welcome <%=email%>  
+                  </p>
+                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5">
+                    <%if(allocatedBatchData.length==0){%>
+                        No Record Found    
+                    <%}%>
+                  </a>
+                  <br><br>
+                    <span class="text-primary" style="color:crimson" data-aos="fade-up" data-aos-delay="300">
+                    <%=message%>
+                  </span>
+                  </p>
+                </div>
+
+                <!-- <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
+                    <img src="images/try.png" alt="Image" class="img-fluid">
+                  </div> -->
+
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer class="footer-section bg-white">
       <div class="container">
         <div class="row">
