--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -73,40 +73,23 @@
 
                 </div>
 
-                <!-- <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
-                  <form action="/admin/adminUploadSyllabus" method="post" class="form-box" enctype="multipart/form-data">
-                    <h3 class="h4 text-black mb-4">Upload Syllabus</h3>
-                    <div class="form-group mb-4">
-                      <select name="subject" id="subject" class="form-control">
-                        <option value="">Select Subject</option>
-                        <option value="Mern Stack">Mern Stack</option>
-                        <option value="Python with AI/ML">Python with AI/ML</option>
-                        <option value="Java Programming Language">Java Programming Language</option>
-                        <option value="C | C++ Language">C | C++ Language</option>
-                      </select>
-                    </div>
-                    <div class="form-group mb-4">
-                      <select name="type" id="type" class="form-control">
-                        <option value="">Select Type</option>
-                        <option value="Short Term Course">Short Term Course</option>
-                        <option value="Placement Oriented Course">Placement Oriented Course</option>
-                      </select>
+                <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
+                 
+                  <form action="/admin/sendTestimonialLink" method="post" class="form-box">
+                    <h3 class="h6 text-black mb-2">
+                      Send Testimonial Link to <span style="color:red; font-size: 20px;">Student</span>
+                    </h3>
+                    
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Email Address" name="email" id="email"
+                        required />
                     </div>
                     <div class="form-group">
-                      Date of Upload: 
-                      <input type="date" name="date" id="date" class="form-control">
-                    </div>
-                    <div class="form-group">
-                      Upload Syllabus:
-                      <input type="file" name="syllabus" id="syllabus" class="form-control">
-                    </div>
-
-                    <div class="form-group">
-                      <input type="submit" class="btn btn-primary btn-pill" value="Upload Syllabus">
+                      <input type="submit" class="btn btn-primary p-2 w-100" value="Send" />
                     </div>
                   </form>
 
-                </div> -->
+                </div>
               </div>
             </div>
             
